@@ -1,3 +1,11 @@
+2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b2
+
+ * Fix: comments_overview_for_all was not working proper.
+
+        Thanks to jifl from forum.
+
+ * Fix: Added better support for Zikula (aka postNuke 0.8+)
+
 2008-08-24 Jens Tkotz <jens@peino.de> 1.6-RC2-svn-b1
 
  * Change: Code cleanup, indenting, wording.
